# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.14 - XXX

  From Steven Knight:

  - Add support for Java (javac and jar).



RELEASE 0.13 - Mon, 31 Mar 2003 20:22:00 -0600

  From Charles Crain:

  - Fix a bug when BuildDir(duplicate=0) is used and SConscript
    files are called from within other SConscript files.

  - Support (older) versions of Perforce which don't set the Windows
    registry.



RELEASE 0.12 - Thu, 27 Mar 2003 23:52:09 -0600

  From Charles Crain:

  - Added support for the Perforce source code management system.

  - Fix str(Node.FS) so that it returns a path relative to the calling
    SConscript file's directory, not the top-level directory.

  - Added support for a separate src_dir argument to SConscript()
    that allows explicit specification of where the source files
    for an SConscript file can be found.

  - Support more easily re-usable flavors of command generators by
    calling callable variables when strings are expanded.

  From Steven Knight:

  - Added an INSTALL construction variable that can be set to a function
    to control how the Install() and InstallAs() Builders install files.
    The default INSTALL function now copies, not links, files.

  - Remove deprecated features:  the "name" argument to Builder objects,
    and the Environment.Update() method.

  - Add an Environment.SourceCode() method to support fetching files
    from source code systems.  Add factory methods that create Builders
    to support BitKeeper, CVS, RCS, and SCCS.  Add support for fetching
    files from RCS or SCCS transparently (like GNU Make).

  - Make the internal to_String() function more efficient.

  - Make the error message the same as other build errors when there's a
    problem unlinking a target file in preparation for it being built.

  - Make TARGET, TARGETS, SOURCE and SOURCES reserved variable names and